# resource-integration

./: .commitlintrc.yml  .env.example  .gitignore  CHANGELOG.md  README.md  README.zh-CN.md  SECURITY.md  eslint.config.mjs  package-lock.json  package.json  playwright.config.ts  prisma.config.ts  vitest.config.ts
.github/: dependabot.yml
.github/rulesets/: README.md  main.json
.github/workflows/: app-ci.yml  ci-lint.yml  codeql.yml  commitlint.yml  gitleaks.yml  pages.yml  release-attest.yml  release-please.yml  reusable-ci.yml  scorecard.yml  selftest.yml  zizmor.yml
app/: globals.css  layout.tsx  page.tsx
app/[locale]/: page.tsx  public-page.css
components/admin/: AdminDashboard.tsx  LoginForm.tsx
components/public/: WebsiteDirectory.tsx
database/: initial-database.sql
docs/: 01-business-logic.md  02-tech-spec.md  03-dev-phases.md  04-deployment-guide.md  index.html  input.css  tailwind.config.js
docs/testing/: 01-test-plan.md  02-manual-test-cases.md  03-auto-test-spec.md  04-test-report.md
lib/: auth.ts  env.ts  i18n.ts  password.ts  prisma.ts  responses.ts  validators.ts  websites.ts
messages/: en.json  zh-CN.json
prisma/: schema.prisma  seed.ts
scripts/: apply-rulesets.ps1  apply-rulesets.sh  deploy-vercel.ps1  deploy-vercel.sh  install.ps1
specs/: admin-auth.spec.md  public-directory.spec.md  website-management.spec.md
tests/fixtures/python-app/: README.md  pyproject.toml
tests/fixtures/python-app/selftest_app/: __init__.py  calc.py
tests/fixtures/python-app/tests/: test_calc.py
tests/unit/: auth.test.ts  env.test.ts  (+1 more)
(+24 files in other folders)
